# completos_bot

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
bot/: app.py  commands.py  handlers.py  models.py  tasks.py  utils.py
bot/commands/: __init__.py  about.py  add_option.py  command.py  config.py  new_poll.py  show_options.py  start.py
bot/handlers/: __init__.py  configuration_handler.py  handler.py  handlers.py
bot/keyboards/: config.py
